# fc2024

./: .gitignore  main.py  test.md
lua/: waypoint_upload.lua
ros_bags/data1/: data1_0.db3  metadata.yaml
ros_bags/data10/: data10_0.db3  metadata.yaml
ros_bags/data11/: data11_0.db3  metadata.yaml
ros_bags/data12/: data12_0.db3  metadata.yaml
ros_bags/data13/: metadata.yaml
ros_bags/data2/: data2_0.db3  metadata.yaml
ros_bags/data3/: data3_0.db3  metadata.yaml
ros_bags/data4/: data4_0.db3  metadata.yaml
ros_bags/data5/: data5_0.db3  metadata.yaml
ros_bags/data6/: data6_0.db3  metadata.yaml
ros_bags/data7/: data7_0.db3  metadata.yaml
ros_bags/data8/: data8_0.db3  metadata.yaml
ros_bags/data9/: data9_0.db3  metadata.yaml
ros_bags/rosbag2_2024_05_26-10_35_53/: metadata.yaml  rosbag2_2024_05_26-10_35_53_0.db3
ros_bags/rosbag2_2024_05_26-10_54_05/: metadata.yaml  rosbag2_2024_05_26-10_54_05_0.db3
scripts/: waypoint_upload.lua
simulation_stuff/scripts/: demo_new_version_nr.lua  mission-choose-load.lua  way4.txt  way_detect.lua
src/gen_trajectory/: package.xml  setup.cfg  setup.py
src/gen_trajectory/gen_trajectory/: location.py  node.py
src/interpolate/: package.xml  setup.cfg  setup.py
src/interpolate/interpolate/: node.py
src/pose_relate/: package.xml  setup.cfg  setup.py
src/pose_relate/pose_relate/: node.py
src/takeoff_test/: package.xml  setup.cfg  setup.py
src/takeoff_test/takeoff_test/: node_1.py
src/visualize/: package.xml  setup.py
src/visualize/visualize/: trajectory_node.py
src/waypoint_gen/: package.xml  setup.py
src/waypoint_gen/waypoint_gen/: node.py
utils/: CompeitionWaypointA.py  DropWayPointGen.py  FinalWaypoint.py  classes.py  interpolate.py  location.py  main  main.cpp
