<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>takeoff_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="joe@todo.todo">joe</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>mavros_msg</depend>
  <depend>std_msg</depend>
  <depend>sensor_msg</depend>
  <depend>geometry_msg</depend>
  <depend>nav_msg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
