<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visualize</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="2419466090@qq.com">joe</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>


  <depend>rclpy</depend>
  <depend>mavros_msg</depend>
  <depend>std_msg</depend>
  <depend>sensor_msg</depend>
  <depend>geometry_msg</depend>
  <depend>nav_msg</depend>
  <depend>numpy</depend>
  <depend>mpl_toolkits</depend>
  <depend>matplotlib</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
